parser/parser.output
Terminals unused in grammar

   EOF_T
   OTHER_T


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: varDeclaration
    5            | funcDeclaration

    6 varDeclaration: INT_T varDeclarationList ';'
    7               | INT_T error ';'

    8 varDeclarationList: varDeclarationList ',' varDec
    9                   | varDec

   10 varDec: ID_T
   11       | ID_T '=' expression
   12       | ID_T '[' INTCONST_T ']'

   13 funcDeclaration: INT_T ID_T '(' formalParams ')' compoundStatement
   14                | VOID_T ID_T '(' formalParams ')' compoundStatement

   15 formalParams: formalList
   16             | VOID_T
   17             | %empty

   18 formalList: formalList ',' formalParam
   19           | formalParam

   20 formalParam: INT_T ID_T
   21            | INT_T ID_T '[' ']'

   22 compoundStatement: '{' localDeclarations statementList '}'

   23 localDeclarations: localDeclarations varDeclaration
   24                  | %empty

   25 statementList: statementList statement
   26              | %empty

   27 statement: expressionStatement
   28          | compoundStatement
   29          | ifStatement
   30          | whileStatement
   31          | doWhileStatement
   32          | forStatement
   33          | returnStatement
   34          | readStatement
   35          | printStatement

   36 expressionStatement: expression ';'
   37                    | error ';'
   38                    | ';'

   39 ifStatement: IF_T '(' expression ')' statement
   40            | IF_T '(' error ')' statement
   41            | IF_T '(' expression ')' statement ELSE_T statement
   42            | IF_T '(' error ')' statement ELSE_T statement

   43 whileStatement: WHILE_T '(' expression ')' statement
   44               | WHILE_T '(' error ')' statement

   45 doWhileStatement: DO_T statement WHILE_T '(' expression ')' ';'
   46                 | DO_T statement WHILE_T '(' error ')' ';'

   47 forStatement: FOR_T '(' forHeaderExpr ';' forHeaderExpr ';' forHeaderExpr ')' statement
   48             | FOR_T '(' error ')' statement

   49 forHeaderExpr: expression
   50              | %empty

   51 returnStatement: RETURN_T ';'
   52                | RETURN_T expression ';'
   53                | RETURN_T error ';'

   54 readStatement: READ_T var ';'
   55              | READ_T error ';'

   56 printStatement: PRINT_T expression ';'
   57               | PRINT_T STRINGCONST_T ';'
   58               | PRINT_T error ';'

   59 expression: var '=' expression
   60           | rValue

   61 var: ID_T
   62    | ID_T '[' expression ']'

   63 rValue: expression '+' expression
   64       | expression '-' expression
   65       | expression '*' expression
   66       | expression '/' expression
   67       | expression '%' expression
   68       | expression '<' expression
   69       | expression LT_EQUAL_T expression
   70       | expression '>' expression
   71       | expression GT_EQUAL_T expression
   72       | expression ISEQUAL_T expression
   73       | expression NOTEQUAL_T expression
   74       | expression AND_T expression
   75       | expression OR_T expression
   76       | '!' expression
   77       | '-' expression
   78       | var
   79       | INCREMENT_T var
   80       | DECREMENT_T var
   81       | '(' expression ')'
   82       | call
   83       | INTCONST_T

   84 call: ID_T '(' args ')'

   85 args: argList
   86     | %empty

   87 argList: argList ',' expression
   88        | expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 76
'%' (37) 67
'(' (40) 13 14 39 40 41 42 43 44 45 46 47 48 81 84
')' (41) 13 14 39 40 41 42 43 44 45 46 47 48 81 84
'*' (42) 65
'+' (43) 63
',' (44) 8 18 87
'-' (45) 64 77
'/' (47) 66
';' (59) 6 7 36 37 38 45 46 47 51 52 53 54 55 56 57 58
'<' (60) 68
'=' (61) 11 59
'>' (62) 70
'[' (91) 12 21 62
']' (93) 12 21 62
'{' (123) 22
'}' (125) 22
error (256) 7 37 40 42 44 46 48 53 55 58
ID_T (258) 10 11 12 13 14 20 21 61 62 84
INTCONST_T (259) 12 83
STRINGCONST_T (260) 57
ISEQUAL_T (261) 72
NOTEQUAL_T (262) 73
LT_EQUAL_T (263) 69
GT_EQUAL_T (264) 71
INCREMENT_T (265) 79
DECREMENT_T (266) 80
AND_T (267) 74
OR_T (268) 75
INT_T (269) 6 7 13 20 21
VOID_T (270) 14 16
WHILE_T (271) 43 44 45 46
FOR_T (272) 47 48
IF_T (273) 39 40 41 42
ELSE_T (274) 41 42
RETURN_T (275) 51 52 53
READ_T (276) 54 55
PRINT_T (277) 56 57 58
EOF_T (278)
OTHER_T (279)
DO_T (280) 45 46
ERR_EXPR (281)
ERR_PRINT (282)
ERR_READ (283)
ERR_RETURN (284)
ERR_LOOP (285)
ERR_IF (286)
ERR_ELSE (287)
LOWER_THAN_ELSE (288)
NON_FUNC_DEC (289)
FUNC_DEC (290)
EXPR_P (291)
VAR_P (292)
UNARYM (293)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
program (57)
    on left: 1, on right: 0
declarationList (58)
    on left: 2 3, on right: 1 2
declaration (59)
    on left: 4 5, on right: 2 3
varDeclaration (60)
    on left: 6 7, on right: 4 23
varDeclarationList (61)
    on left: 8 9, on right: 6 8
varDec (62)
    on left: 10 11 12, on right: 8 9
funcDeclaration (63)
    on left: 13 14, on right: 5
formalParams (64)
    on left: 15 16 17, on right: 13 14
formalList (65)
    on left: 18 19, on right: 15 18
formalParam (66)
    on left: 20 21, on right: 18 19
compoundStatement (67)
    on left: 22, on right: 13 14 28
localDeclarations (68)
    on left: 23 24, on right: 22 23
statementList (69)
    on left: 25 26, on right: 22 25
statement (70)
    on left: 27 28 29 30 31 32 33 34 35, on right: 25 39 40 41 42 43
    44 45 46 47 48
expressionStatement (71)
    on left: 36 37 38, on right: 27
ifStatement (72)
    on left: 39 40 41 42, on right: 29
whileStatement (73)
    on left: 43 44, on right: 30
doWhileStatement (74)
    on left: 45 46, on right: 31
forStatement (75)
    on left: 47 48, on right: 32
forHeaderExpr (76)
    on left: 49 50, on right: 47
returnStatement (77)
    on left: 51 52 53, on right: 33
readStatement (78)
    on left: 54 55, on right: 34
printStatement (79)
    on left: 56 57 58, on right: 35
expression (80)
    on left: 59 60, on right: 11 36 39 41 43 45 49 52 56 59 62 63 64
    65 66 67 68 69 70 71 72 73 74 75 76 77 81 87 88
var (81)
    on left: 61 62, on right: 54 59 78 79 80
rValue (82)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
    81 82 83, on right: 60
call (83)
    on left: 84, on right: 82
args (84)
    on left: 85 86, on right: 84
argList (85)
    on left: 87 88, on right: 85 87


State 0

    0 $accept: . program $end

    INT_T   shift, and go to state 1
    VOID_T  shift, and go to state 2

    program          go to state 3
    declarationList  go to state 4
    declaration      go to state 5
    varDeclaration   go to state 6
    funcDeclaration  go to state 7


State 1

    6 varDeclaration: INT_T . varDeclarationList ';'
    7               | INT_T . error ';'
   13 funcDeclaration: INT_T . ID_T '(' formalParams ')' compoundStatement

    error  shift, and go to state 8
    ID_T   shift, and go to state 9

    varDeclarationList  go to state 10
    varDec              go to state 11


State 2

   14 funcDeclaration: VOID_T . ID_T '(' formalParams ')' compoundStatement

    ID_T  shift, and go to state 12


State 3

    0 $accept: program . $end

    $end  shift, and go to state 13


State 4

    1 program: declarationList .
    2 declarationList: declarationList . declaration

    INT_T   shift, and go to state 1
    VOID_T  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 14
    varDeclaration   go to state 6
    funcDeclaration  go to state 7


State 5

    3 declarationList: declaration .

    $default  reduce using rule 3 (declarationList)


State 6

    4 declaration: varDeclaration .

    $default  reduce using rule 4 (declaration)


State 7

    5 declaration: funcDeclaration .

    $default  reduce using rule 5 (declaration)


State 8

    7 varDeclaration: INT_T error . ';'

    ';'  shift, and go to state 15


State 9

   10 varDec: ID_T .
   11       | ID_T . '=' expression
   12       | ID_T . '[' INTCONST_T ']'
   13 funcDeclaration: INT_T ID_T . '(' formalParams ')' compoundStatement

    '('  shift, and go to state 16
    '['  shift, and go to state 17
    '='  shift, and go to state 18

    $default  reduce using rule 10 (varDec)


State 10

    6 varDeclaration: INT_T varDeclarationList . ';'
    8 varDeclarationList: varDeclarationList . ',' varDec

    ';'  shift, and go to state 19
    ','  shift, and go to state 20


State 11

    9 varDeclarationList: varDec .

    $default  reduce using rule 9 (varDeclarationList)


State 12

   14 funcDeclaration: VOID_T ID_T . '(' formalParams ')' compoundStatement

    '('  shift, and go to state 21


State 13

    0 $accept: program $end .

    $default  accept


State 14

    2 declarationList: declarationList declaration .

    $default  reduce using rule 2 (declarationList)


State 15

    7 varDeclaration: INT_T error ';' .

    $default  reduce using rule 7 (varDeclaration)


State 16

   13 funcDeclaration: INT_T ID_T '(' . formalParams ')' compoundStatement

    INT_T   shift, and go to state 22
    VOID_T  shift, and go to state 23

    $default  reduce using rule 17 (formalParams)

    formalParams  go to state 24
    formalList    go to state 25
    formalParam   go to state 26


State 17

   12 varDec: ID_T '[' . INTCONST_T ']'

    INTCONST_T  shift, and go to state 27


State 18

   11 varDec: ID_T '=' . expression

    ID_T         shift, and go to state 28
    INTCONST_T   shift, and go to state 29
    INCREMENT_T  shift, and go to state 30
    DECREMENT_T  shift, and go to state 31
    '('          shift, and go to state 32
    '-'          shift, and go to state 33
    '!'          shift, and go to state 34

    expression  go to state 35
    var         go to state 36
    rValue      go to state 37
    call        go to state 38


State 19

    6 varDeclaration: INT_T varDeclarationList ';' .

    $default  reduce using rule 6 (varDeclaration)


State 20

    8 varDeclarationList: varDeclarationList ',' . varDec

    ID_T  shift, and go to state 39

    varDec  go to state 40


State 21

   14 funcDeclaration: VOID_T ID_T '(' . formalParams ')' compoundStatement

    INT_T   shift, and go to state 22
    VOID_T  shift, and go to state 23

    $default  reduce using rule 17 (formalParams)

    formalParams  go to state 41
    formalList    go to state 25
    formalParam   go to state 26


State 22

   20 formalParam: INT_T . ID_T
   21            | INT_T . ID_T '[' ']'

    ID_T  shift, and go to state 42


State 23

   16 formalParams: VOID_T .

    $default  reduce using rule 16 (formalParams)


State 24

   13 funcDeclaration: INT_T ID_T '(' formalParams . ')' compoundStatement

    ')'  shift, and go to state 43


State 25

   15 formalParams: formalList .
   18 formalList: formalList . ',' formalParam

    ','  shift, and go to state 44

    $default  reduce using rule 15 (formalParams)


State 26

   19 formalList: formalParam .

    $default  reduce using rule 19 (formalList)


State 27

   12 varDec: ID_T '[' INTCONST_T . ']'

    ']'  shift, and go to state 45


State 28

   61 var: ID_T .
   62    | ID_T . '[' expression ']'
   84 call: ID_T . '(' args ')'

    '('  shift, and go to state 46
    '['  shift, and go to state 47

    $default  reduce using rule 61 (var)


State 29

   83 rValue: INTCONST_T .

    $default  reduce using rule 83 (rValue)


State 30

   79 rValue: INCREMENT_T . var

    ID_T  shift, and go to state 48

    var  go to state 49


State 31

   80 rValue: DECREMENT_T . var

    ID_T  shift, and go to state 48

    var  go to state 50


State 32

   81 rValue: '(' . expression ')'

    ID_T         shift, and go to state 28
    INTCONST_T   shift, and go to state 29
    INCREMENT_T  shift, and go to state 30
    DECREMENT_T  shift, and go to state 31
    '('          shift, and go to state 32
    '-'          shift, and go to state 33
    '!'          shift, and go to state 34

    expression  go to state 51
    var         go to state 36
    rValue      go to state 37
    call        go to state 38


State 33

   77 rValue: '-' . expression

    ID_T         shift, and go to state 28
    INTCONST_T   shift, and go to state 29
    INCREMENT_T  shift, and go to state 30
    DECREMENT_T  shift, and go to state 31
    '('          shift, and go to state 32
    '-'          shift, and go to state 33
    '!'          shift, and go to state 34

    expression  go to state 52
    var         go to state 36
    rValue      go to state 37
    call        go to state 38


State 34

   76 rValue: '!' . expression

    ID_T         shift, and go to state 28
    INTCONST_T   shift, and go to state 29
    INCREMENT_T  shift, and go to state 30
    DECREMENT_T  shift, and go to state 31
    '('          shift, and go to state 32
    '-'          shift, and go to state 33
    '!'          shift, and go to state 34

    expression  go to state 53
    var         go to state 36
    rValue      go to state 37
    call        go to state 38


State 35

   11 varDec: ID_T '=' expression .
   63 rValue: expression . '+' expression
   64       | expression . '-' expression
   65       | expression . '*' expression
   66       | expression . '/' expression
   67       | expression . '%' expression
   68       | expression . '<' expression
   69       | expression . LT_EQUAL_T expression
   70       | expression . '>' expression
   71       | expression . GT_EQUAL_T expression
   72       | expression . ISEQUAL_T expression
   73       | expression . NOTEQUAL_T expression
   74       | expression . AND_T expression
   75       | expression . OR_T expression

    ISEQUAL_T   shift, and go to state 54
    NOTEQUAL_T  shift, and go to state 55
    LT_EQUAL_T  shift, and go to state 56
    GT_EQUAL_T  shift, and go to state 57
    AND_T       shift, and go to state 58
    OR_T        shift, and go to state 59
    '<'         shift, and go to state 60
    '>'         shift, and go to state 61
    '+'         shift, and go to state 62
    '-'         shift, and go to state 63
    '*'         shift, and go to state 64
    '/'         shift, and go to state 65
    '%'         shift, and go to state 66

    $default  reduce using rule 11 (varDec)


State 36

   59 expression: var . '=' expression
   78 rValue: var .

    '='  shift, and go to state 67

    $default  reduce using rule 78 (rValue)


State 37

   60 expression: rValue .

    $default  reduce using rule 60 (expression)


State 38

   82 rValue: call .

    $default  reduce using rule 82 (rValue)


State 39

   10 varDec: ID_T .
   11       | ID_T . '=' expression
   12       | ID_T . '[' INTCONST_T ']'

    '['  shift, and go to state 17
    '='  shift, and go to state 18

    $default  reduce using rule 10 (varDec)


State 40

    8 varDeclarationList: varDeclarationList ',' varDec .

    $default  reduce using rule 8 (varDeclarationList)


State 41

   14 funcDeclaration: VOID_T ID_T '(' formalParams . ')' compoundStatement

    ')'  shift, and go to state 68


State 42

   20 formalParam: INT_T ID_T .
   21            | INT_T ID_T . '[' ']'

    '['  shift, and go to state 69

    $default  reduce using rule 20 (formalParam)


State 43

   13 funcDeclaration: INT_T ID_T '(' formalParams ')' . compoundStatement

    '{'  shift, and go to state 70

    compoundStatement  go to state 71


State 44

   18 formalList: formalList ',' . formalParam

    INT_T  shift, and go to state 22

    formalParam  go to state 72


State 45

   12 varDec: ID_T '[' INTCONST_T ']' .

    $default  reduce using rule 12 (varDec)


State 46

   84 call: ID_T '(' . args ')'

    ID_T         shift, and go to state 28
    INTCONST_T   shift, and go to state 29
    INCREMENT_T  shift, and go to state 30
    DECREMENT_T  shift, and go to state 31
    '('          shift, and go to state 32
    '-'          shift, and go to state 33
    '!'          shift, and go to state 34

    $default  reduce using rule 86 (args)

    expression  go to state 73
    var         go to state 36
    rValue      go to state 37
    call        go to state 38
    args        go to state 74
    argList     go to state 75


State 47

   62 var: ID_T '[' . expression ']'

    ID_T         shift, and go to state 28
    INTCONST_T   shift, and go to state 29
    INCREMENT_T  shift, and go to state 30
    DECREMENT_T  shift, and go to state 31
    '('          shift, and go to state 32
    '-'          shift, and go to state 33
    '!'          shift, and go to state 34

    expression  go to state 76
    var         go to state 36
    rValue      go to state 37
    call        go to state 38


State 48

   61 var: ID_T .
   62    | ID_T . '[' expression ']'

    '['  shift, and go to state 47

    $default  reduce using rule 61 (var)


State 49

   79 rValue: INCREMENT_T var .

    $default  reduce using rule 79 (rValue)


State 50

   80 rValue: DECREMENT_T var .

    $default  reduce using rule 80 (rValue)


State 51

   63 rValue: expression . '+' expression
   64       | expression . '-' expression
   65       | expression . '*' expression
   66       | expression . '/' expression
   67       | expression . '%' expression
   68       | expression . '<' expression
   69       | expression . LT_EQUAL_T expression
   70       | expression . '>' expression
   71       | expression . GT_EQUAL_T expression
   72       | expression . ISEQUAL_T expression
   73       | expression . NOTEQUAL_T expression
   74       | expression . AND_T expression
   75       | expression . OR_T expression
   81       | '(' expression . ')'
